Remove `vertical-align: middle` from input-group components, no longer needed

--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -36,7 +36,6 @@
 .input-group-addon,
 .input-group-btn {
     white-space: nowrap;
-    vertical-align: middle; // Match the inputs
 }
 
 // Text input groups
